# concept2-backup

./: .gitignore  ARCHITECTURE.md  Concept2 Logbook API.md  README.md
.github/workflows/: backup.yml  download-full-history.yml
data/: stats.json
data/2020/: 2020_06_20_45287469.tcx  2020_06_20_45287470.tcx  2020_06_20_68121905.tcx  2020_06_21_45287468.tcx  2020_06_21_68121894.tcx  2020_06_21_68121896.tcx  2020_06_22_45287466.tcx  2020_06_22_45287467.tcx  2020_06_22_68121890.tcx  2020_06_23_68121913.tcx  2020_06_24_45323461.tcx  2020_06_24_68121892.tcx  2020_06_24_68121904.tcx  2020_06_25_45338504.tcx  2020_06_25_45341414.tcx  2020_06_25_68121891.tcx  2020_06_27_45374602.tcx  2020_06_27_45375065.tcx  2020_06_27_45375066.tcx  2020_06_27_45377229.tcx  2020_06_27_68121883.tcx  2020_06_28_45396666.tcx  2020_06_28_45397102.tcx  2020_06_28_68121911.tcx  2020_06_29_68121903.tcx  2020_06_30_45433439.tcx  2020_06_30_45435583.tcx  2020_06_30_68121893.tcx  2020_07_01_45452474.tcx  2020_07_01_45454884.tcx  2020_07_01_45455106.tcx  2020_07_01_68121879.tcx  2020_07_01_68121884.tcx  2020_07_02_45472767.tcx  2020_07_02_45472768.tcx  (+126 more)
scripts/: README_SIMPLE_AUTH.md  auth.py  download_history.py  download_single.py  pyproject.toml  simple_auth.py  update_heatmap.py
scripts/legacy_auth/: auth.py  auth_client.py  debug_auth.py  test_scope.py
web/: .gitignore  App.tsx  README.md  index.css  index.html  index.tsx  metadata.json  package.json  pnpm-lock.yaml  types.ts  vite.config.ts  vitest.config.ts
worker/: .gitignore  package-lock.json  package.json  wrangler.toml
(+1122 files in other folders)
